[tool.poetry]
name = "metrices-class"
version = "0.1.0"
description = "Evaluate the metrices for each graph in each dataset, produce a dataset with the given values"
authors = ["Amity Aharoni <aharoni.amittai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
attrdict = "^2.0.1"
torch-geometric = "^2.3.1"
torchvision = "^0.15.1"
sklearn = "^0.0.post4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.18.1"

[tool.poe.tasks]
install-torch-cluster = "pip install git+https://github.com/rusty1s/pytorch_cluster.git"
install-torch-sparse = "pip install git+https://github.com/rusty1s/pytorch_sparse.git"
install-torch-scatter = "pip install git+https://github.com/rusty1s/pytorch_scatter.git"
install-torch-spline-conv = "pip install git+https://github.com/rusty1s/pytorch_spline_conv.git"